# properform

./: .gitignore  .travis.yml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  manifest.json  mm.py  play.py  setup.cfg  sitemap.xml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  question-template.md  question.md
assets/javascripts/: modernizr.74668098.js
assets/stylesheets/: application-palette.958c72b0.css
crash/: index.html
css/: colorful.css
docs/: README.md  mkdocs.yml
docs/docs/: crash.md  faq.md  fields.md  form_sets.md  forms.md  formsets.md  index.md  orm.md  rendering.md  things_developers_believe_about_forms.md  validators.md
docs/docs/css/: colorful.css  extra.css  monokai.css
docs/material/: 404.html  base.html
docs/material/assets/javascripts/: application.28f21e1d.js
docs/material/assets/stylesheets/: application.28b5997c.css
docs/material/partials/: footer.html
docs/material/partials/language/: en.html  es.html
faq/: index.html
fields/: index.html
forms/: index.html
formsets/: index.html
frontend/: hyperform.js  proper-form.js
hyperform/: constants.py  form.py  orm_form.py  utils.py  version.py
hyperform/fields/: date_time.py  field_renderable.py  hex_color.py  slug.py
orm/: index.html
proper_form/: __init__.py  field.py  form.py  form_set.py  orm_form.py  types.py  utils.py  validators.py  version.py
proper_form/fields/: __init__.py  base.py  bases.py  boolean.py  collection.py  color.py  common.py  date.py  date_time.py  dates.py  email.py  field.py  field_renderable.py  float.py  hex_color.py  integer.py  month.py  number.py  render.py  slug.py  splitted.py  splitted_date_time.py  text.py  time.py  url.py
proper_form/ftypes/: color.py
proper_form/types/: __init__.py  boolean.py  slug.py  time.py  url.py
rendering/: index.html
search/: search_index.json
tests/: conftest.py  test_form.py  test_form_save.py  test_form_set.py  test_form_set_save.py  test_orm_pony.py  test_orm_sqlalchemy.py  test_validators.py
tests/fields/: test_fields.py  test_render.py  test_render_as_checkbox.py  test_render_as_input.py  test_render_as_radio.py  test_render_as_select.py  test_render_as_textarea.py  test_text.py
tests/ftypes/: test_type_boolean.py  test_type_date.py  test_type_email.py  test_type_hex_color.py  test_type_slug.py  test_type_time.py  test_type_url.py
tests/types/: test_type_boolean.py  test_type_date.py  test_type_email.py  test_type_hex_color.py  test_type_slug.py  test_type_time.py  test_type_url.py
validators/: index.html
