[metadata]
name = proper
version= 1.190730
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
description = A web framework optimized for programmer happiness.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://properframework.dev
project_urls =
    Documentation = https://properframework.dev/docs
license = Apache License Version 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3


[bdist_wheel]
universal = 1


[options]
include_package_data = true
packages = find:
python_requires = >=3.6,<4.0
install_requires =
    copier ~=2.4
    cryptography ~=2.5
    gevent ~=1.4
    gevent-websocket
    itsdangerous ~=1.1
    jinja2 ~=2.10
    pyceo ~=2.190702
    toml ~=0.10
    text-editor ~=1.0.5
    ujson ~=1.35
    wsaccel ~=0.6

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest-cov

dev =
    # Testing & Validation
    pytest-cov
    pytest
    pytest-flake8
    flake8
    ipdb
    tox
    mkdocs
    mkdocs-material
    pymdown-extensions
    pygments
    pygments-github-lexers
    # Documentation
    mkdocs
    mkdocs-material
    pymdown-extensions
    pygments
    pygments-github-lexers

[options.entry_points]
console_scripts =
    proper = proper.cli:run


[flake8]
max-complexity = 10
max-line-length = 110

statistics = true
doctests = True
accept-encodings = utf-8

select = C,E,F,W,B,B950
# W503 line break before binary operator
# E203 whitespace before ':'
# D100  Missing docstring in public module
# D101  Missing docstring in public class
# D102  Missing docstring in public method
# D103  Missing docstring in public function
# D104  Missing docstring in public package
# D105  Missing docstring in magic method
# D107  Missing docstring in __init__
ignore = W503,E203,D100,D101,D102,D103,D104,D105,D107


[tool:pytest]
addopts = --doctest-modules
