[metadata]
name = hyperform
version= 0.200829
url = https://github.com/jpsca/hyperform
project_urls =
    Documentation = https://jpsca.github.io/hyperform
    Issue tracker = https://github.com/jpsca/hyperform/issues
author = Juan-Pablo Scaletti
author_email = juanpablo@jpscaletti.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
license = Apache License Version 2.0
license_file = LICENSE
description = A not-terrible Python form library.
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
python_requires = >=3.6,<4.0
install_requires =
    email-validator ~= 1.0
    idna ~= 2.8
    markupsafe ~= 1.1
    python-slugify ~= 3.0

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    pytest
    pytest-cov
    pony;python_version<"3.8"
    sqlalchemy

dev =
    pytest
    pytest-cov
    pony;python_version<"3.8"
    sqlalchemy
    pytest-flake8
    flake8
    ipdb
    tox
    mkdocs
    mkdocs-material
    pymdown-extensions
    pygments
    pygments-github-lexers

[flake8]
select =
  B,  # bugbear
  B9,  # bugbear opinionated
  C,  # mccabe, comprehensions, commas
  E,  # pycodestyle errors
  F,  # pyflakes
  G,  # logging format
  I,  # imports
  P,
  Q,  # quotes
  RST,  # rst docstring formatting
  T0,  # print
  T4,  # mypy
  W,  # pycodestyle warnings

ignore =
    W503,  # W503 line break before binary operator
    E203,  # E203 whitespace before ':'

max-complexity = 10
max-line-length = 88

statistics = true
doctests = True
accept-encodings = utf-8

[tool:pytest]
addopts = --doctest-modules
